--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -60,7 +60,7 @@ h6 {
 
 .hero{
   min-height: 100vh;
-  background-image: url('../media/cloth-bg.jpg');
+  background-image: url('../media/shopping.jpg');
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -196,6 +196,30 @@ h6 {
   gap: 0.4rem;
 }
 
+
+.product-hero {
+  min-height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: contain;
+  flex-direction: column;
+  position: relative;
+  background-position: center;
+  background-attachment: fixed;
+
+  // override
+  .overlay {
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.8), #da003791);
+    backdrop-filter: blur(8px);
+  }
+}
+
+
+.image-gallery-thumbnail-image{
+  height: 80px;
+  object-fit: contain;
+}
 
 
 
